# Copyright 2018 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

package(default_visibility = ["//visibility:private"])

licenses(["notice"])  # Apache 2.0

# Load generation workload detailed at go/gcs-grpc-aga-workloads.

proto_library(
    name = "options_proto",
    srcs = ["options.proto"],
    deps = [
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

cc_proto_library(
    name = "options_cc_proto",
    deps = [":options_proto"],
)

cc_library(
    name = "options",
    srcs = ["options.cc"],
    hdrs = ["options.h"],
    deps = [
	":options_cc_proto",
	":utils",
        "@com_google_absl//absl/strings",
	"@com_google_protobuf//:protobuf",
        "@google_cloud_cpp//:common",
        "@google_cloud_cpp//:grpc_utils",
	"@google_cloud_cpp//:storage",
    ],
)

cc_library(
    name = "timer",
    srcs = ["timer.cc"],
    hdrs = ["timer.h"],
)

cc_library(
    name = "utils",
    srcs = ["utils.cc"],
    hdrs = ["utils.h"],
    deps = [
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/time",
	"@google_cloud_cpp//:experimental-storage_grpc",
        "@google_cloud_cpp//:common",
        "@google_cloud_cpp//:grpc_utils",
	"@google_cloud_cpp//:storage",
    ],
)

cc_binary(
    name = "run_workload",
    srcs = ["run_workload.cc"],
    deps = [
        ":options",
        ":options_cc_proto",
        ":timer",
        ":utils",
        "@com_google_absl//absl/strings:str_format",
	"@com_google_absl//absl/time",
	"@google_cloud_cpp//:experimental-storage_grpc",
        "@google_cloud_cpp//:common",
	"@google_cloud_cpp//:storage",
    ],
)

